Move implementation to the separate class
Move implementation of IMDSv2 approach to the separate
class. Update documentation and add unit tests for the
new implementation.

--- a/templates/default/paws_pm.tt
+++ b/templates/default/paws_pm.tt
@@ -389,6 +389,8 @@ L<Paws::Credential::File> - Gets credentials from AWS SDK config files
 
 L<Paws::Credential::InstanceProfile> - Gets credentials from the InstanceProfile (Role) of the running instance
 
+L<Paws::Credential::InstanceProfileV2> - Gets credentials from the InstanceProfile (Role) of the running instance using IMDSv2 approach
+
 L<Paws::Credential::STS> - Gets temporary credentials from the Secure Token Service
 
 L<Paws::Credential::AssumeRole> - Gets temporary credentials with AssumeRole
